@@ -1,8 +1,6 @@
 .\" Copyright (c) 2004 Apple Computer, Inc.
 .\" All rights reserved.
 .\"
-.\" @APPLE_BSD_LICENSE_HEADER_START@
-.\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
 .\" are met:
@@ -27,9 +25,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" @APPLE_BSD_LICENSE_HEADER_END@
-.\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/bin/auditd/auditd.8#12 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/bin/auditd/auditd.8#13 $
 .\"
 .Dd October 2, 2006
 .Dt AUDITD 8
