@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_control.3#8 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_control.3#9 $
 .\"
 .Dd April 19, 2005
 .Dt AU_CONTROL 3
@@ -77,7 +77,7 @@ resets the database iterator to the beginning of the database; see the
 section for more information.
 .Pp
 The
-.Fn sendac
+.Fn endac
 function
 closes the
 .Xr audit_control 5
